--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -56,6 +56,22 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 } */
 
+/* Exemple simple */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #D9D9D9; /* fond gris clair */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
 .project-list {
   display: flex;
   flex-direction: column;
