--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,3 +1,11 @@
+/* Reset global */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   background-color: #D9D9D9; /* fond gris clair */
