--- a/src/components/TaskEditModal.css
+++ b/src/components/TaskEditModal.css
@@ -85,13 +85,14 @@
   background-color: #1da1e0;
 }
 
-.btn-cancel {
-  background-color: #f5f5f5;
+.modal-actions .btn-cancel {
+  background-color: rgb(121, 121, 121);
   color: white;
-  border: none;
-  padding: 8px 14px;
-  border-radius: 6px;
-  cursor: pointer;
+}
+
+.modal-actions .btn-cancel:hover {
+  background-color: rgb(83, 83, 83);
+  color: white;
 }
 
 .btn-delete {
@@ -100,15 +101,12 @@
   border: none;
   padding: 8px 14px;
   border-radius: 6px;
-  margin-top: 8px;
+  margin-top: 10px;
   cursor: pointer;
-
+  transition: background-color 0.2s ease, transform 0.1s ease;
 }
 
 .btn-delete:hover {
-    background-color: #950505;
-
-}
-.btn-cancel:hover {
-  background-color: #c62828;
+  background-color: #950505;
+  transform: scale(1.03);
 }
